Remove enrollments attribute from classes entity

--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -259,8 +259,8 @@
 				<th scope="col">Day</th>
 				<th scope="col">Time</th>
 				<th scope="col">Price</th>
-				<th scope="col">Class Enrollments</th>
 				<th scope="col">Class Seats</th>
+                <th scope="col">Teacher ID</th>
 				<th scope="col">Update</th>
 				<th scope="col">Delete</th>
 			</tr>
@@ -303,8 +303,9 @@
 						<td><input style="width:180px" type="date" name="class_day" placeholder="Day"></td>
 						<td><input style="width:180px" type="datetime-local" name="class_time" placehoder="Time"></td>
 						<td><input style="width:50px" type="number" name="class_price" value="Price"></td>
-						<td><input style="width:50px" type="number" name="class_enrollments" value="Class Enrollments"></td>
 						<td><input style="width:50px" type="number" name="class_seats" value="Class Seats"></td>
+						<td><input style="width:50px" type="number" name="teacher_id" value="Teacher ID"></td>
+                        
 						<td><button id="classButton" class="btn btn-secondary" name="class-insert" value="0">Add Class</button></td>					
 					</form>
 				<!--</td>-->
