--- a/hello_world_pets_website/templates/classes.html
+++ b/hello_world_pets_website/templates/classes.html
@@ -135,8 +135,8 @@
 				<th scope="col">Day</th>
 				<th scope="col">Time</th>
 				<th scope="col">Price</th>
-				<th scope="col">Number Enrolled</th>
-				<th scope="col">Spaces Left</th>
+				<th scope="col">Class Seats</th>
+                <th scope="col">Instructor ID</th>
         <th scope="col">Pet ID</th>
         <th scope="col"></th>
 			</tr>
@@ -151,7 +151,7 @@
             <td>{{r[4]}}</td>
             <td>{{r[5]}}</td>
             <td>{{r[6]}}</td>
-            <td>{{r[7]}} - {{r[6]}}</td>
+            <td>{{r[7]}}</td>
             <td>
               <input type="text" style="width:100%" name="enrollPetId">
             </td>
