--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -106,9 +106,50 @@
 				<td>{{r[7]}}</td>
 				<td>{{r[8]}}</td>
 				<td>
-                    <form action="" method="post">
+                    <!--<form action="" method="post">
 					<button class="btn btn-info" name="customer-update" value="{{r[0]}}">Update</button>
-                    </form>
+					</form>-->
+					<button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Update</button>
+
+					<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  						<div class="modal-dialog" role="document">
+    						<div class="modal-content">
+      							<div class="modal-header">
+        							<h5 class="modal-title" id="exampleModalLabel">Update Customer</h5>
+       								 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          								<span aria-hidden="true">&times;</span>
+        							</button>
+      							</div>
+      							<div class="modal-body">
+        							<form>
+          								<div class="form-group">
+											<input style="width: 4px" type="number"  name="customer_id" id="cust_id" hidden>
+            								<label for="customer-first-name" class="col-form-label">First Name:</label>
+											<input type="text" class="form-control" name="customer-first-name">
+											<label for="customer-last-name" class="col-form-label">Last Name:</label>
+											<input type="text" class="form-control" name="customer-last-name">
+											<label for="customer-email" class="col-form-label">Email:</label>
+											<input type="text" class="form-control" name="customer-email">
+											<label for="customer-phone" class="col-form-label">Phone number/label>
+											<input type="text" class="form-control" name="customer-phone">
+											<label for="customer-address" class="col-form-label">Street Address:</label>
+											<input type="text" class="form-control" name="customer-address">
+											<label for="customer-city" class="col-form-label">City:</label>
+											<input type="text" class="form-control" name="customer-city">
+											<label for="customer-state" class="col-form-label">State:</label>
+											<input type="text" class="form-control" name="customer-state">
+											<label for="customer-zip-code" class="col-form-label">Zip Code:</label>
+            								<input type="text" class="form-control" name="customer-zip-code">
+          								</div>
+        							</form>
+      							</div>
+      						<div class="modal-footer">
+        						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        						<button type="button" class="btn btn-primary" name="customer-update" value="{{r[0]}}"">Update Customer</button>
+      						</div>
+   						</div>
+  					</div>
+				</div>
 				</td>
 				<td>
                     <form action="" method="post">
