--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -125,31 +125,32 @@
       							<div class="modal-body">
         							<form action="" method="post">
           								<div class="form-group">
-											<input style="width: 4px" type="number"  name="customer-id" id="cust_id" hidden>
+											<input style="width: 4px" type="hidden"  name="customer-id" id="cust_id" value="{{r[0]}}">
             								<label for="customer-first-name" class="col-form-label">First Name:</label>
-											<input type="text" class="form-control" name="customer-first-name">
+											<input type="text" class="form-control" name="customer-first-name" value="{{r[1]}}">
 											<label for="customer-last-name" class="col-form-label">Last Name:</label>
-											<input type="text" class="form-control" name="customer-last-name">
+											<input type="text" class="form-control" name="customer-last-name" value="{{r[2]}}">
 											<label for="customer-email" class="col-form-label">Email:</label>
-											<input type="text" class="form-control" name="customer-email">
+											<input type="text" class="form-control" name="customer-email" value="{{r[3]}}">
 											<label for="customer-phone" class="col-form-label">Phone number/label>
-											<input type="text" class="form-control" name="customer-phone">
+											<input type="text" class="form-control" name="customer-phone" value="{{r[4]}}">
 											<label for="customer-address" class="col-form-label">Street Address:</label>
-											<input type="text" class="form-control" name="customer-address">
+											<input type="text" class="form-control" name="customer-address" value="{{r[5]}}">
 											<label for="customer-city" class="col-form-label">City:</label>
-											<input type="text" class="form-control" name="customer-city">
+											<input type="text" class="form-control" name="customer-city" value="{{r[6]}}">
 											<label for="customer-state" class="col-form-label">State:</label>
-											<input type="text" class="form-control" name="customer-state">
+											<input type="text" class="form-control" name="customer-state" value="{{r[7]}}">
 											<label for="customer-zip-code" class="col-form-label">Zip Code:</label>
-            								<input type="text" class="form-control" name="customer-zip-code">
+											<input type="text" class="form-control" name="customer-zip-code" value="{{r[8]}}">
+											<button type="submit" class="btn btn-primary" name="customer-update" value="updateCustButton">Update Customer</button>
           								</div>
         							</form>
       							</div>
       						<div class="modal-footer">
 								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-								<form action="" method="post">
+								<!--<form action="" method="post">
 									<button type="submit" class="btn btn-primary" name="customer-update" value="updateCustomer">Update Customer</button>
-							    </form>
+							    </form>-->
 							</div>
    						</div>
   					</div>
