--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -111,7 +111,7 @@
 					</form>-->
 					<!-- Got the pop up form code from bootstrap
 					https://getbootstrap.com/docs/4.0/components/modal/-->
-					<button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Update</button>
+					<button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap" value="{{r[0]}}">Update</button>
 
 					<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   						<div class="modal-dialog" role="document">
@@ -125,7 +125,7 @@
       							<div class="modal-body">
         							<form action="" method="post">
           								<div class="form-group">
-											<input style="width: 4px" type="hidden"  name="customer-id" id="cust_id" value="{{r[0]}}">
+											<input type="number"  name="customer-id" id="cust_id" value="{{r[0]}}">
             								<label for="customer-first-name" class="col-form-label">First Name:</label>
 											<input type="text" class="form-control" name="customer-first-name" value="{{r[1]}}">
 											<label for="customer-last-name" class="col-form-label">Last Name:</label>
@@ -142,15 +142,13 @@
 											<input type="text" class="form-control" name="customer-state" value="{{r[7]}}">
 											<label for="customer-zip-code" class="col-form-label">Zip Code:</label>
 											<input type="text" class="form-control" name="customer-zip-code" value="{{r[8]}}">
+											<br>
 											<button type="submit" class="btn btn-primary" name="customer-update" value="updateCustButton">Update Customer</button>
           								</div>
         							</form>
       							</div>
       						<div class="modal-footer">
 								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-								<!--<form action="" method="post">
-									<button type="submit" class="btn btn-primary" name="customer-update" value="updateCustomer">Update Customer</button>
-							    </form>-->
 							</div>
    						</div>
   					</div>
