--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -481,9 +481,37 @@
 				<td>{{e[1]}}</td>
 				<td>{{e[2]}}</td>
 				<td>
-					<form action="" method="post">
-					<button class="btn btn-info" name='enroll-update' value='{{e[0]}}'>Update</button>
-					</form>
+							<!-- Got the pop up form code from bootstrap. This creates a pop-up form the user can edit
+					https://getbootstrap.com/docs/4.0/components/modal/-->
+					<button id="updatePetButton" type="button" class="btn btn-info" data-toggle="modal" data-target="#enrollModal" value="{{e[0]}}">Update</button>
+
+					<div class="modal fade" id="enrollModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  						<div class="modal-dialog" role="document">
+    						<div class="modal-content">
+      							<div class="modal-header">
+        							<h5 class="modal-title" id="exampleModalLabel">Update Enrollment</h5>
+       								 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          								<span aria-hidden="true">&times;</span>
+        							</button>
+								  </div>
+      							<div class="modal-body">
+        							<form action="" method="post">
+          								<div class="form-group">
+											<input type="hidden" class="enroll-id" name="enroll-id" value="{{e[0]}}">
+											<label for="class-pet" class="col-form-label">Pet Name:</label>
+											<input type="text" class="form-control pet-name" name="pet-name" required>
+            								<label for="class-name" class="col-form-label">Class Name:</label>
+											<input type="text" class="form-control class-name" name="class-name" required>
+											<br>
+											<button type="submit" class="btn btn-primary" name="enrollment-update" value="{{e[0]}}">Update Enrollment</button>
+          								</div>
+        							</form>
+								  </div>
+      						<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+							</div>
+   						</div>
+  					</div>
 				</td>
 				<td>
 					<form action="" method="post">
